# accelerated-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  setup.bat
images/: MSAA.ppm  adjustableCamera.ppm  defocusBlur.ppm  dielectric.ppm  diffuse.ppm  fuzzyMetal.ppm  gamma.ppm  internalReflection.ppm  lambertian.ppm  metal.ppm  schlickApprox.ppm  shadow.ppm
src/: aabb.cuh  aabb.h  bvh.cuh  bvh.h  camera.cuh  camera.h  color.h  constant_medium.cuh  constant_medium.h  hittable.cuh  hittable.h  hittable_list.cuh  hittable_list.h  image_io.h  interval.h  main.cpp  main.cu  material.cuh  material.h  perlin.cuh  perlin.h  quad.cuh  quad.h  ray.cuh  ray.h  rtw_stb_image.h  rtweekend.h  sphere.cuh  sphere.h  texture.cuh  texture.h  util.cuh  vec3.cuh  vec3.h
